IPP/projects/IPP-test.php-master/parse-only/vyzi_tests/should-pass/no_arg_instructions1.src
.IPPcode19
CREATEFRAME
PUSHFRAME
POPFRAME
RETURN
BREAK
