IPP/projects/IPP-test.php-master/parse-only/vyzi_tests/should-fail/wrong_arg_count1.src
.IPPcode19
CREATEFRAME GF@ABC
